parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> class SEMICOLON program
Rule 2     program -> class SEMICOLON
Rule 3     class -> CLASS TYPE _inherits LBRACE ffeature RBRACE
Rule 4     _inherits -> INHERITS TYPE
Rule 5     _inherits -> empty
Rule 6     ffeature -> feature SEMICOLON ffeature
Rule 7     ffeature -> empty
Rule 8     feature -> ID LPAREN formal RPAREN TDOTS TYPE LBRACE expr RBRACE
Rule 9     feature -> ID LPAREN RPAREN TDOTS TYPE LBRACE expr RBRACE
Rule 10    feature -> temp
Rule 11    formal -> idDots COMMA formal
Rule 12    formal -> idDots
Rule 13    expression_list -> expr SEMICOLON expression_list
Rule 14    expression_list -> expr SEMICOLON
Rule 15    expr -> NOT expr
Rule 16    expr -> expr PLUS expr
Rule 17    expr -> expr MINUS expr
Rule 18    expr -> expr MULTIPLY expr
Rule 19    expr -> expr DIVIDE expr
Rule 20    expr -> LPAREN expr RPAREN
Rule 21    expr -> ISVOID expr
Rule 22    expr -> block
Rule 23    expr -> conditional
Rule 24    expr -> loop
Rule 25    expr -> case
Rule 26    expr -> dispatch
Rule 27    expr -> INT_COMP expr
Rule 28    block -> LBRACE expression_list RBRACE
Rule 29    expr -> ID
Rule 30    expr -> INTEGER
Rule 31    expr -> STRING
Rule 32    expr -> TRUE
Rule 33    expr -> FALSE
Rule 34    expr -> NEW TYPE
Rule 35    expr -> let
Rule 36    dispatch -> expr especific DOT dispatch_call
Rule 37    dispatch -> dispatch_call
Rule 38    especific -> AT TYPE
Rule 39    especific -> empty
Rule 40    dispatch_call -> ID LPAREN RPAREN
Rule 41    dispatch_call -> ID LPAREN expr RPAREN
Rule 42    dispatch_call -> ID LPAREN expr params_expression RPAREN
Rule 43    params_expression -> COMMA expr params_expression
Rule 44    params_expression -> COMMA expr
Rule 45    empty -> <empty>
Rule 46    let -> LET declaration_list IN expr
Rule 47    declaration_list -> temp COMMA declaration_list
Rule 48    declaration_list -> temp
Rule 49    temp -> idDots
Rule 50    temp -> idDots ASSIGN expr
Rule 51    idDots -> ID TDOTS TYPE
Rule 52    conditional -> IF expr THEN expr ELSE expr FI
Rule 53    loop -> WHILE expr LOOP expr POOL
Rule 54    case -> CASE expr OF add ESAC
Rule 55    add -> derivate SEMICOLON add
Rule 56    add -> derivate SEMICOLON
Rule 57    derivate -> idDots ARROW expr
Rule 58    expr -> expr LT expr
Rule 59    expr -> expr LTEQ expr
Rule 60    expr -> expr EQ expr
Rule 61    expr -> ID ASSIGN expr

Terminals, with rules where they appear

ARROW                : 57
ASSIGN               : 50 61
AT                   : 38
CASE                 : 54
CLASS                : 3
COMMA                : 11 43 44 47
DIVIDE               : 19
DOT                  : 36
ELSE                 : 52
EQ                   : 60
ESAC                 : 54
FALSE                : 33
FI                   : 52
ID                   : 8 9 29 40 41 42 51 61
IF                   : 52
IN                   : 46
INHERITS             : 4
INTEGER              : 30
INT_COMP             : 27
ISVOID               : 21
LBRACE               : 3 8 9 28
LET                  : 46
LOOP                 : 53
LPAREN               : 8 9 20 40 41 42
LT                   : 58
LTEQ                 : 59
MINUS                : 17
MULTIPLY             : 18
NEW                  : 34
NOT                  : 15
OF                   : 54
PLUS                 : 16
POOL                 : 53
RBRACE               : 3 8 9 28
RPAREN               : 8 9 20 40 41 42
SEMICOLON            : 1 2 6 13 14 55 56
STRING               : 31
TDOTS                : 8 9 51
THEN                 : 52
TRUE                 : 32
TYPE                 : 3 4 8 9 34 38 51
WHILE                : 53
error                : 

Nonterminals, with rules where they appear

_inherits            : 3
add                  : 54 55
block                : 22
case                 : 25
class                : 1 2
conditional          : 23
declaration_list     : 46 47
derivate             : 55 56
dispatch             : 26
dispatch_call        : 36 37
empty                : 5 7 39
especific            : 36
expr                 : 8 9 13 14 15 16 16 17 17 18 18 19 19 20 21 27 36 41 42 43 44 46 50 52 52 52 53 53 54 57 58 58 59 59 60 60 61
expression_list      : 13 28
feature              : 6
ffeature             : 3 6
formal               : 8 11
idDots               : 11 12 49 50 57
let                  : 35
loop                 : 24
params_expression    : 42 43
program              : 1 0
temp                 : 10 47 48

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class SEMICOLON program
    (2) program -> . class SEMICOLON
    (3) class -> . CLASS TYPE _inherits LBRACE ffeature RBRACE

    CLASS           shift and go to state 3

    program                        shift and go to state 1
    class                          shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> class . SEMICOLON program
    (2) program -> class . SEMICOLON

    SEMICOLON       shift and go to state 4


state 3

    (3) class -> CLASS . TYPE _inherits LBRACE ffeature RBRACE

    TYPE            shift and go to state 5


state 4

    (1) program -> class SEMICOLON . program
    (2) program -> class SEMICOLON .
    (1) program -> . class SEMICOLON program
    (2) program -> . class SEMICOLON
    (3) class -> . CLASS TYPE _inherits LBRACE ffeature RBRACE

    $end            reduce using rule 2 (program -> class SEMICOLON .)
    CLASS           shift and go to state 3

    class                          shift and go to state 2
    program                        shift and go to state 6

state 5

    (3) class -> CLASS TYPE . _inherits LBRACE ffeature RBRACE
    (4) _inherits -> . INHERITS TYPE
    (5) _inherits -> . empty
    (45) empty -> .

    INHERITS        shift and go to state 8
    LBRACE          reduce using rule 45 (empty -> .)

    _inherits                      shift and go to state 7
    empty                          shift and go to state 9

state 6

    (1) program -> class SEMICOLON program .

    $end            reduce using rule 1 (program -> class SEMICOLON program .)


state 7

    (3) class -> CLASS TYPE _inherits . LBRACE ffeature RBRACE

    LBRACE          shift and go to state 10


state 8

    (4) _inherits -> INHERITS . TYPE

    TYPE            shift and go to state 11


state 9

    (5) _inherits -> empty .

    LBRACE          reduce using rule 5 (_inherits -> empty .)


state 10

    (3) class -> CLASS TYPE _inherits LBRACE . ffeature RBRACE
    (6) ffeature -> . feature SEMICOLON ffeature
    (7) ffeature -> . empty
    (8) feature -> . ID LPAREN formal RPAREN TDOTS TYPE LBRACE expr RBRACE
    (9) feature -> . ID LPAREN RPAREN TDOTS TYPE LBRACE expr RBRACE
    (10) feature -> . temp
    (45) empty -> .
    (49) temp -> . idDots
    (50) temp -> . idDots ASSIGN expr
    (51) idDots -> . ID TDOTS TYPE

    ID              shift and go to state 15
    RBRACE          reduce using rule 45 (empty -> .)

    ffeature                       shift and go to state 12
    feature                        shift and go to state 13
    empty                          shift and go to state 14
    temp                           shift and go to state 16
    idDots                         shift and go to state 17

state 11

    (4) _inherits -> INHERITS TYPE .

    LBRACE          reduce using rule 4 (_inherits -> INHERITS TYPE .)


state 12

    (3) class -> CLASS TYPE _inherits LBRACE ffeature . RBRACE

    RBRACE          shift and go to state 18


state 13

    (6) ffeature -> feature . SEMICOLON ffeature

    SEMICOLON       shift and go to state 19


state 14

    (7) ffeature -> empty .

    RBRACE          reduce using rule 7 (ffeature -> empty .)


state 15

    (8) feature -> ID . LPAREN formal RPAREN TDOTS TYPE LBRACE expr RBRACE
    (9) feature -> ID . LPAREN RPAREN TDOTS TYPE LBRACE expr RBRACE
    (51) idDots -> ID . TDOTS TYPE

    LPAREN          shift and go to state 20
    TDOTS           shift and go to state 21


state 16

    (10) feature -> temp .

    SEMICOLON       reduce using rule 10 (feature -> temp .)


state 17

    (49) temp -> idDots .
    (50) temp -> idDots . ASSIGN expr

    SEMICOLON       reduce using rule 49 (temp -> idDots .)
    COMMA           reduce using rule 49 (temp -> idDots .)
    IN              reduce using rule 49 (temp -> idDots .)
    ASSIGN          shift and go to state 22


state 18

    (3) class -> CLASS TYPE _inherits LBRACE ffeature RBRACE .

    SEMICOLON       reduce using rule 3 (class -> CLASS TYPE _inherits LBRACE ffeature RBRACE .)


state 19

    (6) ffeature -> feature SEMICOLON . ffeature
    (6) ffeature -> . feature SEMICOLON ffeature
    (7) ffeature -> . empty
    (8) feature -> . ID LPAREN formal RPAREN TDOTS TYPE LBRACE expr RBRACE
    (9) feature -> . ID LPAREN RPAREN TDOTS TYPE LBRACE expr RBRACE
    (10) feature -> . temp
    (45) empty -> .
    (49) temp -> . idDots
    (50) temp -> . idDots ASSIGN expr
    (51) idDots -> . ID TDOTS TYPE

    ID              shift and go to state 15
    RBRACE          reduce using rule 45 (empty -> .)

    feature                        shift and go to state 13
    ffeature                       shift and go to state 23
    empty                          shift and go to state 14
    temp                           shift and go to state 16
    idDots                         shift and go to state 17

state 20

    (8) feature -> ID LPAREN . formal RPAREN TDOTS TYPE LBRACE expr RBRACE
    (9) feature -> ID LPAREN . RPAREN TDOTS TYPE LBRACE expr RBRACE
    (11) formal -> . idDots COMMA formal
    (12) formal -> . idDots
    (51) idDots -> . ID TDOTS TYPE

    RPAREN          shift and go to state 26
    ID              shift and go to state 24

    formal                         shift and go to state 25
    idDots                         shift and go to state 27

state 21

    (51) idDots -> ID TDOTS . TYPE

    TYPE            shift and go to state 28


state 22

    (50) temp -> idDots ASSIGN . expr
    (15) expr -> . NOT expr
    (16) expr -> . expr PLUS expr
    (17) expr -> . expr MINUS expr
    (18) expr -> . expr MULTIPLY expr
    (19) expr -> . expr DIVIDE expr
    (20) expr -> . LPAREN expr RPAREN
    (21) expr -> . ISVOID expr
    (22) expr -> . block
    (23) expr -> . conditional
    (24) expr -> . loop
    (25) expr -> . case
    (26) expr -> . dispatch
    (27) expr -> . INT_COMP expr
    (29) expr -> . ID
    (30) expr -> . INTEGER
    (31) expr -> . STRING
    (32) expr -> . TRUE
    (33) expr -> . FALSE
    (34) expr -> . NEW TYPE
    (35) expr -> . let
    (58) expr -> . expr LT expr
    (59) expr -> . expr LTEQ expr
    (60) expr -> . expr EQ expr
    (61) expr -> . ID ASSIGN expr
    (28) block -> . LBRACE expression_list RBRACE
    (52) conditional -> . IF expr THEN expr ELSE expr FI
    (53) loop -> . WHILE expr LOOP expr POOL
    (54) case -> . CASE expr OF add ESAC
    (36) dispatch -> . expr especific DOT dispatch_call
    (37) dispatch -> . dispatch_call
    (46) let -> . LET declaration_list IN expr
    (40) dispatch_call -> . ID LPAREN RPAREN
    (41) dispatch_call -> . ID LPAREN expr RPAREN
    (42) dispatch_call -> . ID LPAREN expr params_expression RPAREN

    NOT             shift and go to state 30
    LPAREN          shift and go to state 31
    ISVOID          shift and go to state 32
    INT_COMP        shift and go to state 38
    ID              shift and go to state 39
    INTEGER         shift and go to state 40
    STRING          shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    NEW             shift and go to state 44
    LBRACE          shift and go to state 46
    IF              shift and go to state 47
    WHILE           shift and go to state 48
    CASE            shift and go to state 49
    LET             shift and go to state 51

    expr                           shift and go to state 29
    block                          shift and go to state 33
    conditional                    shift and go to state 34
    loop                           shift and go to state 35
    case                           shift and go to state 36
    dispatch                       shift and go to state 37
    let                            shift and go to state 45
    dispatch_call                  shift and go to state 50

state 23

    (6) ffeature -> feature SEMICOLON ffeature .

    RBRACE          reduce using rule 6 (ffeature -> feature SEMICOLON ffeature .)


state 24

    (51) idDots -> ID . TDOTS TYPE

    TDOTS           shift and go to state 21


state 25

    (8) feature -> ID LPAREN formal . RPAREN TDOTS TYPE LBRACE expr RBRACE

    RPAREN          shift and go to state 52


state 26

    (9) feature -> ID LPAREN RPAREN . TDOTS TYPE LBRACE expr RBRACE

    TDOTS           shift and go to state 53


state 27

    (11) formal -> idDots . COMMA formal
    (12) formal -> idDots .

    COMMA           shift and go to state 54
    RPAREN          reduce using rule 12 (formal -> idDots .)


state 28

    (51) idDots -> ID TDOTS TYPE .

    ASSIGN          reduce using rule 51 (idDots -> ID TDOTS TYPE .)
    SEMICOLON       reduce using rule 51 (idDots -> ID TDOTS TYPE .)
    COMMA           reduce using rule 51 (idDots -> ID TDOTS TYPE .)
    RPAREN          reduce using rule 51 (idDots -> ID TDOTS TYPE .)
    IN              reduce using rule 51 (idDots -> ID TDOTS TYPE .)
    ARROW           reduce using rule 51 (idDots -> ID TDOTS TYPE .)


state 29

    (50) temp -> idDots ASSIGN expr .
    (16) expr -> expr . PLUS expr
    (17) expr -> expr . MINUS expr
    (18) expr -> expr . MULTIPLY expr
    (19) expr -> expr . DIVIDE expr
    (58) expr -> expr . LT expr
    (59) expr -> expr . LTEQ expr
    (60) expr -> expr . EQ expr
    (36) dispatch -> expr . especific DOT dispatch_call
    (38) especific -> . AT TYPE
    (39) especific -> . empty
    (45) empty -> .

    SEMICOLON       reduce using rule 50 (temp -> idDots ASSIGN expr .)
    COMMA           reduce using rule 50 (temp -> idDots ASSIGN expr .)
    IN              reduce using rule 50 (temp -> idDots ASSIGN expr .)
    PLUS            shift and go to state 55
    MINUS           shift and go to state 56
    MULTIPLY        shift and go to state 57
    DIVIDE          shift and go to state 58
    LT              shift and go to state 59
    LTEQ            shift and go to state 60
    EQ              shift and go to state 61
    AT              shift and go to state 63
    DOT             reduce using rule 45 (empty -> .)

    especific                      shift and go to state 62
    empty                          shift and go to state 64

state 30

    (15) expr -> NOT . expr
    (15) expr -> . NOT expr
    (16) expr -> . expr PLUS expr
    (17) expr -> . expr MINUS expr
    (18) expr -> . expr MULTIPLY expr
    (19) expr -> . expr DIVIDE expr
    (20) expr -> . LPAREN expr RPAREN
    (21) expr -> . ISVOID expr
    (22) expr -> . block
    (23) expr -> . conditional
    (24) expr -> . loop
    (25) expr -> . case
    (26) expr -> . dispatch
    (27) expr -> . INT_COMP expr
    (29) expr -> . ID
    (30) expr -> . INTEGER
    (31) expr -> . STRING
    (32) expr -> . TRUE
    (33) expr -> . FALSE
    (34) expr -> . NEW TYPE
    (35) expr -> . let
    (58) expr -> . expr LT expr
    (59) expr -> . expr LTEQ expr
    (60) expr -> . expr EQ expr
    (61) expr -> . ID ASSIGN expr
    (28) block -> . LBRACE expression_list RBRACE
    (52) conditional -> . IF expr THEN expr ELSE expr FI
    (53) loop -> . WHILE expr LOOP expr POOL
    (54) case -> . CASE expr OF add ESAC
    (36) dispatch -> . expr especific DOT dispatch_call
    (37) dispatch -> . dispatch_call
    (46) let -> . LET declaration_list IN expr
    (40) dispatch_call -> . ID LPAREN RPAREN
    (41) dispatch_call -> . ID LPAREN expr RPAREN
    (42) dispatch_call -> . ID LPAREN expr params_expression RPAREN

    NOT             shift and go to state 30
    LPAREN          shift and go to state 31
    ISVOID          shift and go to state 32
    INT_COMP        shift and go to state 38
    ID              shift and go to state 39
    INTEGER         shift and go to state 40
    STRING          shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    NEW             shift and go to state 44
    LBRACE          shift and go to state 46
    IF              shift and go to state 47
    WHILE           shift and go to state 48
    CASE            shift and go to state 49
    LET             shift and go to state 51

    expr                           shift and go to state 65
    block                          shift and go to state 33
    conditional                    shift and go to state 34
    loop                           shift and go to state 35
    case                           shift and go to state 36
    dispatch                       shift and go to state 37
    let                            shift and go to state 45
    dispatch_call                  shift and go to state 50

state 31

    (20) expr -> LPAREN . expr RPAREN
    (15) expr -> . NOT expr
    (16) expr -> . expr PLUS expr
    (17) expr -> . expr MINUS expr
    (18) expr -> . expr MULTIPLY expr
    (19) expr -> . expr DIVIDE expr
    (20) expr -> . LPAREN expr RPAREN
    (21) expr -> . ISVOID expr
    (22) expr -> . block
    (23) expr -> . conditional
    (24) expr -> . loop
    (25) expr -> . case
    (26) expr -> . dispatch
    (27) expr -> . INT_COMP expr
    (29) expr -> . ID
    (30) expr -> . INTEGER
    (31) expr -> . STRING
    (32) expr -> . TRUE
    (33) expr -> . FALSE
    (34) expr -> . NEW TYPE
    (35) expr -> . let
    (58) expr -> . expr LT expr
    (59) expr -> . expr LTEQ expr
    (60) expr -> . expr EQ expr
    (61) expr -> . ID ASSIGN expr
    (28) block -> . LBRACE expression_list RBRACE
    (52) conditional -> . IF expr THEN expr ELSE expr FI
    (53) loop -> . WHILE expr LOOP expr POOL
    (54) case -> . CASE expr OF add ESAC
    (36) dispatch -> . expr especific DOT dispatch_call
    (37) dispatch -> . dispatch_call
    (46) let -> . LET declaration_list IN expr
    (40) dispatch_call -> . ID LPAREN RPAREN
    (41) dispatch_call -> . ID LPAREN expr RPAREN
    (42) dispatch_call -> . ID LPAREN expr params_expression RPAREN

    NOT             shift and go to state 30
    LPAREN          shift and go to state 31
    ISVOID          shift and go to state 32
    INT_COMP        shift and go to state 38
    ID              shift and go to state 39
    INTEGER         shift and go to state 40
    STRING          shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    NEW             shift and go to state 44
    LBRACE          shift and go to state 46
    IF              shift and go to state 47
    WHILE           shift and go to state 48
    CASE            shift and go to state 49
    LET             shift and go to state 51

    expr                           shift and go to state 66
    block                          shift and go to state 33
    conditional                    shift and go to state 34
    loop                           shift and go to state 35
    case                           shift and go to state 36
    dispatch                       shift and go to state 37
    let                            shift and go to state 45
    dispatch_call                  shift and go to state 50

state 32

    (21) expr -> ISVOID . expr
    (15) expr -> . NOT expr
    (16) expr -> . expr PLUS expr
    (17) expr -> . expr MINUS expr
    (18) expr -> . expr MULTIPLY expr
    (19) expr -> . expr DIVIDE expr
    (20) expr -> . LPAREN expr RPAREN
    (21) expr -> . ISVOID expr
    (22) expr -> . block
    (23) expr -> . conditional
    (24) expr -> . loop
    (25) expr -> . case
    (26) expr -> . dispatch
    (27) expr -> . INT_COMP expr
    (29) expr -> . ID
    (30) expr -> . INTEGER
    (31) expr -> . STRING
    (32) expr -> . TRUE
    (33) expr -> . FALSE
    (34) expr -> . NEW TYPE
    (35) expr -> . let
    (58) expr -> . expr LT expr
    (59) expr -> . expr LTEQ expr
    (60) expr -> . expr EQ expr
    (61) expr -> . ID ASSIGN expr
    (28) block -> . LBRACE expression_list RBRACE
    (52) conditional -> . IF expr THEN expr ELSE expr FI
    (53) loop -> . WHILE expr LOOP expr POOL
    (54) case -> . CASE expr OF add ESAC
    (36) dispatch -> . expr especific DOT dispatch_call
    (37) dispatch -> . dispatch_call
    (46) let -> . LET declaration_list IN expr
    (40) dispatch_call -> . ID LPAREN RPAREN
    (41) dispatch_call -> . ID LPAREN expr RPAREN
    (42) dispatch_call -> . ID LPAREN expr params_expression RPAREN

    NOT             shift and go to state 30
    LPAREN          shift and go to state 31
    ISVOID          shift and go to state 32
    INT_COMP        shift and go to state 38
    ID              shift and go to state 39
    INTEGER         shift and go to state 40
    STRING          shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    NEW             shift and go to state 44
    LBRACE          shift and go to state 46
    IF              shift and go to state 47
    WHILE           shift and go to state 48
    CASE            shift and go to state 49
    LET             shift and go to state 51

    expr                           shift and go to state 67
    block                          shift and go to state 33
    conditional                    shift and go to state 34
    loop                           shift and go to state 35
    case                           shift and go to state 36
    dispatch                       shift and go to state 37
    let                            shift and go to state 45
    dispatch_call                  shift and go to state 50

state 33

    (22) expr -> block .

    PLUS            reduce using rule 22 (expr -> block .)
    MINUS           reduce using rule 22 (expr -> block .)
    MULTIPLY        reduce using rule 22 (expr -> block .)
    DIVIDE          reduce using rule 22 (expr -> block .)
    LT              reduce using rule 22 (expr -> block .)
    LTEQ            reduce using rule 22 (expr -> block .)
    EQ              reduce using rule 22 (expr -> block .)
    AT              reduce using rule 22 (expr -> block .)
    DOT             reduce using rule 22 (expr -> block .)
    SEMICOLON       reduce using rule 22 (expr -> block .)
    COMMA           reduce using rule 22 (expr -> block .)
    IN              reduce using rule 22 (expr -> block .)
    RPAREN          reduce using rule 22 (expr -> block .)
    THEN            reduce using rule 22 (expr -> block .)
    LOOP            reduce using rule 22 (expr -> block .)
    OF              reduce using rule 22 (expr -> block .)
    ELSE            reduce using rule 22 (expr -> block .)
    POOL            reduce using rule 22 (expr -> block .)
    RBRACE          reduce using rule 22 (expr -> block .)
    FI              reduce using rule 22 (expr -> block .)


state 34

    (23) expr -> conditional .

    PLUS            reduce using rule 23 (expr -> conditional .)
    MINUS           reduce using rule 23 (expr -> conditional .)
    MULTIPLY        reduce using rule 23 (expr -> conditional .)
    DIVIDE          reduce using rule 23 (expr -> conditional .)
    LT              reduce using rule 23 (expr -> conditional .)
    LTEQ            reduce using rule 23 (expr -> conditional .)
    EQ              reduce using rule 23 (expr -> conditional .)
    AT              reduce using rule 23 (expr -> conditional .)
    DOT             reduce using rule 23 (expr -> conditional .)
    SEMICOLON       reduce using rule 23 (expr -> conditional .)
    COMMA           reduce using rule 23 (expr -> conditional .)
    IN              reduce using rule 23 (expr -> conditional .)
    RPAREN          reduce using rule 23 (expr -> conditional .)
    THEN            reduce using rule 23 (expr -> conditional .)
    LOOP            reduce using rule 23 (expr -> conditional .)
    OF              reduce using rule 23 (expr -> conditional .)
    ELSE            reduce using rule 23 (expr -> conditional .)
    POOL            reduce using rule 23 (expr -> conditional .)
    RBRACE          reduce using rule 23 (expr -> conditional .)
    FI              reduce using rule 23 (expr -> conditional .)


state 35

    (24) expr -> loop .

    PLUS            reduce using rule 24 (expr -> loop .)
    MINUS           reduce using rule 24 (expr -> loop .)
    MULTIPLY        reduce using rule 24 (expr -> loop .)
    DIVIDE          reduce using rule 24 (expr -> loop .)
    LT              reduce using rule 24 (expr -> loop .)
    LTEQ            reduce using rule 24 (expr -> loop .)
    EQ              reduce using rule 24 (expr -> loop .)
    AT              reduce using rule 24 (expr -> loop .)
    DOT             reduce using rule 24 (expr -> loop .)
    SEMICOLON       reduce using rule 24 (expr -> loop .)
    COMMA           reduce using rule 24 (expr -> loop .)
    IN              reduce using rule 24 (expr -> loop .)
    RPAREN          reduce using rule 24 (expr -> loop .)
    THEN            reduce using rule 24 (expr -> loop .)
    LOOP            reduce using rule 24 (expr -> loop .)
    OF              reduce using rule 24 (expr -> loop .)
    ELSE            reduce using rule 24 (expr -> loop .)
    POOL            reduce using rule 24 (expr -> loop .)
    RBRACE          reduce using rule 24 (expr -> loop .)
    FI              reduce using rule 24 (expr -> loop .)


state 36

    (25) expr -> case .

    PLUS            reduce using rule 25 (expr -> case .)
    MINUS           reduce using rule 25 (expr -> case .)
    MULTIPLY        reduce using rule 25 (expr -> case .)
    DIVIDE          reduce using rule 25 (expr -> case .)
    LT              reduce using rule 25 (expr -> case .)
    LTEQ            reduce using rule 25 (expr -> case .)
    EQ              reduce using rule 25 (expr -> case .)
    AT              reduce using rule 25 (expr -> case .)
    DOT             reduce using rule 25 (expr -> case .)
    SEMICOLON       reduce using rule 25 (expr -> case .)
    COMMA           reduce using rule 25 (expr -> case .)
    IN              reduce using rule 25 (expr -> case .)
    RPAREN          reduce using rule 25 (expr -> case .)
    THEN            reduce using rule 25 (expr -> case .)
    LOOP            reduce using rule 25 (expr -> case .)
    OF              reduce using rule 25 (expr -> case .)
    ELSE            reduce using rule 25 (expr -> case .)
    POOL            reduce using rule 25 (expr -> case .)
    RBRACE          reduce using rule 25 (expr -> case .)
    FI              reduce using rule 25 (expr -> case .)


state 37

    (26) expr -> dispatch .

    PLUS            reduce using rule 26 (expr -> dispatch .)
    MINUS           reduce using rule 26 (expr -> dispatch .)
    MULTIPLY        reduce using rule 26 (expr -> dispatch .)
    DIVIDE          reduce using rule 26 (expr -> dispatch .)
    LT              reduce using rule 26 (expr -> dispatch .)
    LTEQ            reduce using rule 26 (expr -> dispatch .)
    EQ              reduce using rule 26 (expr -> dispatch .)
    AT              reduce using rule 26 (expr -> dispatch .)
    DOT             reduce using rule 26 (expr -> dispatch .)
    SEMICOLON       reduce using rule 26 (expr -> dispatch .)
    COMMA           reduce using rule 26 (expr -> dispatch .)
    IN              reduce using rule 26 (expr -> dispatch .)
    RPAREN          reduce using rule 26 (expr -> dispatch .)
    THEN            reduce using rule 26 (expr -> dispatch .)
    LOOP            reduce using rule 26 (expr -> dispatch .)
    OF              reduce using rule 26 (expr -> dispatch .)
    ELSE            reduce using rule 26 (expr -> dispatch .)
    POOL            reduce using rule 26 (expr -> dispatch .)
    RBRACE          reduce using rule 26 (expr -> dispatch .)
    FI              reduce using rule 26 (expr -> dispatch .)


state 38

    (27) expr -> INT_COMP . expr
    (15) expr -> . NOT expr
    (16) expr -> . expr PLUS expr
    (17) expr -> . expr MINUS expr
    (18) expr -> . expr MULTIPLY expr
    (19) expr -> . expr DIVIDE expr
    (20) expr -> . LPAREN expr RPAREN
    (21) expr -> . ISVOID expr
    (22) expr -> . block
    (23) expr -> . conditional
    (24) expr -> . loop
    (25) expr -> . case
    (26) expr -> . dispatch
    (27) expr -> . INT_COMP expr
    (29) expr -> . ID
    (30) expr -> . INTEGER
    (31) expr -> . STRING
    (32) expr -> . TRUE
    (33) expr -> . FALSE
    (34) expr -> . NEW TYPE
    (35) expr -> . let
    (58) expr -> . expr LT expr
    (59) expr -> . expr LTEQ expr
    (60) expr -> . expr EQ expr
    (61) expr -> . ID ASSIGN expr
    (28) block -> . LBRACE expression_list RBRACE
    (52) conditional -> . IF expr THEN expr ELSE expr FI
    (53) loop -> . WHILE expr LOOP expr POOL
    (54) case -> . CASE expr OF add ESAC
    (36) dispatch -> . expr especific DOT dispatch_call
    (37) dispatch -> . dispatch_call
    (46) let -> . LET declaration_list IN expr
    (40) dispatch_call -> . ID LPAREN RPAREN
    (41) dispatch_call -> . ID LPAREN expr RPAREN
    (42) dispatch_call -> . ID LPAREN expr params_expression RPAREN

    NOT             shift and go to state 30
    LPAREN          shift and go to state 31
    ISVOID          shift and go to state 32
    INT_COMP        shift and go to state 38
    ID              shift and go to state 39
    INTEGER         shift and go to state 40
    STRING          shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    NEW             shift and go to state 44
    LBRACE          shift and go to state 46
    IF              shift and go to state 47
    WHILE           shift and go to state 48
    CASE            shift and go to state 49
    LET             shift and go to state 51

    expr                           shift and go to state 68
    block                          shift and go to state 33
    conditional                    shift and go to state 34
    loop                           shift and go to state 35
    case                           shift and go to state 36
    dispatch                       shift and go to state 37
    let                            shift and go to state 45
    dispatch_call                  shift and go to state 50

state 39

    (29) expr -> ID .
    (61) expr -> ID . ASSIGN expr
    (40) dispatch_call -> ID . LPAREN RPAREN
    (41) dispatch_call -> ID . LPAREN expr RPAREN
    (42) dispatch_call -> ID . LPAREN expr params_expression RPAREN

    PLUS            reduce using rule 29 (expr -> ID .)
    MINUS           reduce using rule 29 (expr -> ID .)
    MULTIPLY        reduce using rule 29 (expr -> ID .)
    DIVIDE          reduce using rule 29 (expr -> ID .)
    LT              reduce using rule 29 (expr -> ID .)
    LTEQ            reduce using rule 29 (expr -> ID .)
    EQ              reduce using rule 29 (expr -> ID .)
    AT              reduce using rule 29 (expr -> ID .)
    DOT             reduce using rule 29 (expr -> ID .)
    SEMICOLON       reduce using rule 29 (expr -> ID .)
    COMMA           reduce using rule 29 (expr -> ID .)
    IN              reduce using rule 29 (expr -> ID .)
    RPAREN          reduce using rule 29 (expr -> ID .)
    THEN            reduce using rule 29 (expr -> ID .)
    LOOP            reduce using rule 29 (expr -> ID .)
    OF              reduce using rule 29 (expr -> ID .)
    ELSE            reduce using rule 29 (expr -> ID .)
    POOL            reduce using rule 29 (expr -> ID .)
    RBRACE          reduce using rule 29 (expr -> ID .)
    FI              reduce using rule 29 (expr -> ID .)
    ASSIGN          shift and go to state 69
    LPAREN          shift and go to state 70


state 40

    (30) expr -> INTEGER .

    PLUS            reduce using rule 30 (expr -> INTEGER .)
    MINUS           reduce using rule 30 (expr -> INTEGER .)
    MULTIPLY        reduce using rule 30 (expr -> INTEGER .)
    DIVIDE          reduce using rule 30 (expr -> INTEGER .)
    LT              reduce using rule 30 (expr -> INTEGER .)
    LTEQ            reduce using rule 30 (expr -> INTEGER .)
    EQ              reduce using rule 30 (expr -> INTEGER .)
    AT              reduce using rule 30 (expr -> INTEGER .)
    DOT             reduce using rule 30 (expr -> INTEGER .)
    SEMICOLON       reduce using rule 30 (expr -> INTEGER .)
    COMMA           reduce using rule 30 (expr -> INTEGER .)
    IN              reduce using rule 30 (expr -> INTEGER .)
    RPAREN          reduce using rule 30 (expr -> INTEGER .)
    THEN            reduce using rule 30 (expr -> INTEGER .)
    LOOP            reduce using rule 30 (expr -> INTEGER .)
    OF              reduce using rule 30 (expr -> INTEGER .)
    ELSE            reduce using rule 30 (expr -> INTEGER .)
    POOL            reduce using rule 30 (expr -> INTEGER .)
    RBRACE          reduce using rule 30 (expr -> INTEGER .)
    FI              reduce using rule 30 (expr -> INTEGER .)


state 41

    (31) expr -> STRING .

    PLUS            reduce using rule 31 (expr -> STRING .)
    MINUS           reduce using rule 31 (expr -> STRING .)
    MULTIPLY        reduce using rule 31 (expr -> STRING .)
    DIVIDE          reduce using rule 31 (expr -> STRING .)
    LT              reduce using rule 31 (expr -> STRING .)
    LTEQ            reduce using rule 31 (expr -> STRING .)
    EQ              reduce using rule 31 (expr -> STRING .)
    AT              reduce using rule 31 (expr -> STRING .)
    DOT             reduce using rule 31 (expr -> STRING .)
    SEMICOLON       reduce using rule 31 (expr -> STRING .)
    COMMA           reduce using rule 31 (expr -> STRING .)
    IN              reduce using rule 31 (expr -> STRING .)
    RPAREN          reduce using rule 31 (expr -> STRING .)
    THEN            reduce using rule 31 (expr -> STRING .)
    LOOP            reduce using rule 31 (expr -> STRING .)
    OF              reduce using rule 31 (expr -> STRING .)
